feat: support x-response-samples to render code responses
