# demo/openapi.yaml
@@ -17,14 +17,14 @@ info:
     It was **extended** to illustrate features of [generator-openapi-repo](https://github.com/Rebilly/generator-openapi-repo)
     tool and [ReDoc](https://github.com/Rebilly/ReDoc) documentation. In addition to standard
     OpenAPI syntax we use a few [vendor extensions](https://github.com/Rebilly/ReDoc/blob/master/docs/redoc-vendor-extensions.md).
-    
+
     # OpenAPI Specification
     This API is documented in **OpenAPI format** and is based on
     [Petstore sample](http://petstore.swagger.io/) provided by [swagger.io](http://swagger.io) team.
     It was **extended** to illustrate features of [generator-openapi-repo](https://github.com/Rebilly/generator-openapi-repo)
     tool and [ReDoc](https://github.com/Rebilly/ReDoc) documentation. In addition to standard
     OpenAPI syntax we use a few [vendor extensions](https://github.com/Rebilly/ReDoc/blob/master/docs/redoc-vendor-extensions.md).
-    
+
     # Cross-Origin Resource Sharing
     This API features Cross-Origin Resource Sharing (CORS) implemented in compliance with  [W3C spec](https://www.w3.org/TR/cors/).
     And that allows cross-domain communication from the browser.
@@ -38,7 +38,7 @@ info:
     OAuth2 - an open protocol to allow secure authorization in a simple
     and standard method from web, mobile and desktop applications.
 
-    <security-definitions /> 
+    <security-definitions />
 
   version: 1.0.0
   title: Swagger Petstore
@@ -187,6 +187,27 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Pet not found
+      x-code-samples:
+        - lang: 'Javascript'
+          source: |
+            const pet = new PetStore.v1.Pet();
+            await pet.get(1, (err, pet);
+      x-response-samples:
+        - lang: 'Javascript'
+          source: |
+            Pet {
+              id: number;
+              name: String;
+
+              getName(): String;
+            }
+        - lang: 'Javascript'
+          label: 'Javascript error'
+          source: |
+            ServerResponse {
+              status: number;
+              message: String;
+            }
       security:
         - api_key: []
     post:
